--- a/terminator/config
+++ b/terminator/config
@@ -1,12 +1,20 @@
 [global_config]
+  ask_before_closing = never
 [keybindings]
 [profiles]
   [[default]]
-    background_darkness = 0.35
+    background_darkness = 0.7
     background_type = transparent
-    font = Terminus
-    foreground_color = "#e53c00"
+    cursor_fg_color = "#000000"
+    cursor_bg_color = "#c64600"
+    cursor_color_default = False
+    font = Terminus Bold 11
+    foreground_color = "#c64600"
+    palette = "#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#613583:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
+    title_transmit_fg_color = "#000000"
+    title_transmit_bg_color = "#c64600"
+    title_inactive_bg_color = "#613583"
     title_use_system_font = False
     title_font = Terminus
 [layouts]
